[workspace]
members = [
    "core/ptx",
    "core/pam",
    "core/lawnstrings",
    "cli",
    "core/rton",
    "core/newton",
    "core/rsb",
    "core/rsg",
    "core/popfx",
    "core/bnk",
    "core/wem",
    "core/patch",
]
resolver = "2"

[workspace.package]
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
