[workspace]
members = [
    "core/pam",
    "core/lawnstrings",
    "cli",
    "core/rton",
    "core/newton",
    "core/rsb",
    "core/popfx",
    "core/bnk",
    "core/wem",
    "core/patch",
    "core/smf",
    "core/atlas",
    "core/utils",
    "core/resources", "core/resource",
]
resolver = "2"

[workspace.package]
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
