[package]
name = "pvz2-toolkit-cli"
version = "0.1.0"
edition.workspace = true

[dependencies]
ptx = { path = "../core/ptx" }
rsg = { path = "../core/rsg" }
rsb = { path = "../core/rsb" }
rton = { path = "../core/rton" }
newton = { path = "../core/newton" }
pam = { path = "../core/pam" }
lawnstrings = { path = "../core/lawnstrings" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5"
rayon = "1.11.0"
popfx = { version = "0.1.0", path = "../core/popfx" }
bnk = { version = "0.1.0", path = "../core/bnk" }
wem = { version = "0.1.0", path = "../core/wem" }
patch = { version = "0.1.0", path = "../core/patch" }
smf = { version = "0.1.0", path = "../core/smf" }
image = "0.25"
serde-xml-rs = "0.8.2"
md-5 = "0.10.6"
