[package]
name = "bnk"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utils = { path = "../utils" }
thiserror = "1.0"
byteorder = "1.5"
anyhow = "1.0"
hex = "0.4"

[dev-dependencies]
hound = "3.5.1"
tempfile = "3.25.0"
wem = { path = "../wem" }
