[package]
name = "pam"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.4"
anyhow = "1.0"
thiserror = "1.0"
bitflags = "2.10.0"
serde_json = "1.0.149"
image = "0.25.0"
apng = "0.3.4"
rayon = "1.11.0"
regex = "1.12.3"
quick-xml = "0.39.2"
scraper = "0.25.0"
