[package]
name = "rsb"
version = "0.1.0"
edition.workspace = true

[dependencies]
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
shared_utils = { package = "utils", path = "../utils" }
encoding_rs = "0.8"
anyhow = "1.0"
image = "0.25"
rayon = "1.8"
walkdir = "2.5.0"
flate2 = "1.0"
bytemuck = "1.25.0"
